Added a reactive form for topic.
Submission does nothing. Next step is to create a service that pushes it
to a list and then to the database.

--- a/blog-frontend/src/app/topic-page/topic-page.component.html
+++ b/blog-frontend/src/app/topic-page/topic-page.component.html
@@ -29,6 +29,4 @@
         Add topic
 </button>
 
-<form class="" method="post">
-
-</form>
+<app-topic-form *ngIf="newTopic" (formSubmitted)="newTopic=false"></app-topic-form>
