--- a/blog-frontend/src/styles.css
+++ b/blog-frontend/src/styles.css
@@ -40,6 +40,14 @@ h1 {
   cursor: pointer;
 }
 
+.button-cancel {
+  background-color: rgb(142, 65, 65);
+}
+
+.button-clear {
+  background-color: rgb(168, 166, 166);
+}
+
 .general-button:active, .general-button:hover {
   background-color: rgb(115, 187, 214);
 }
