Added a service to add topics to a list.
Need more formatting on the listing of topics and also need to get
started with the HTTP requests to insert them into a database.

--- a/blog-frontend/src/app/topic-page/topic-page.component.html
+++ b/blog-frontend/src/app/topic-page/topic-page.component.html
@@ -10,7 +10,12 @@
     (clickEvent)="headerClicked=true"
     *ngIf="topicList.length>0&&displaySub">
   <li *ngFor="let topic of topicList">
-    {{ topic }}
+    <span>
+      {{ topic.title }}
+    </span> <br>
+    <span>
+      {{ topic.desc }}
+    </span>
   </li>
 </ol>
 
