--- a/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
+++ b/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="topicForm">
+<form [formGroup]="topicForm" (ngSubmit)="addNewTopic()">
 
   <div class="form-elements">
     <div class="form-row">
@@ -18,7 +18,6 @@
     <button type="submit"
             name="submit"
             class="general-button"
-            (click)="addNewTopic()"
             [disabled]="topicForm.touched&&topicForm.invalid">
             Submit
     </button>
