Strongly typed the topic variable and some changes in page layout.
Up to now, for convenience, the variables being passed to methods and as elements of an array were chosen as any. This defeats any validation that typescript can offer at compile time. So now each topic has been defined as a JS object with title and desc (description). Also, the list of topics only displays the title and only on clicking the title does the description of the topic show.

--- a/blog-frontend/src/app/topic-page/topic-page.component.html
+++ b/blog-frontend/src/app/topic-page/topic-page.component.html
@@ -1,4 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <h1>Quick Note App</h1>
 
 <h2 class="url-link"
@@ -6,18 +5,18 @@
     View archived topics
 </h2>
 
-<ol class="topic-listing"
-    (clickEvent)="headerClicked=true"
-    *ngIf="topicList.length>0&&displaySub">
-  <li *ngFor="let topic of topicList">
-    <span>
-      {{ topic.title }}
-    </span> <br>
-    <span>
-      {{ topic.desc }}
-    </span>
-  </li>
-</ol>
+<div class="topic-list">
+  <ol class="topic-listing"
+      (clickEvent)="headerClicked=true"
+      *ngIf="topicList.length>0&&displaySub">
+    <li *ngFor="let topic of topicList; let topicIndex = index">
+      <span class="topic-title" (click)="displayTopic(topicIndex)">
+        {{ topic.title }}
+      </span>
+      <p *ngIf="topicIndex===topicOnDisplay">{{ topic.desc }}</p>
+    </li>
+  </ol>
+</div>
 
 <p class="topic-message"
     (clickEvent)="headerClicked=true"
