Fetched and wrote topics to database and started with subtopics.

--- a/blog-frontend/src/app/topic-page/topic-page.component.html
+++ b/blog-frontend/src/app/topic-page/topic-page.component.html
@@ -13,7 +13,22 @@
       <span class="topic-title" (click)="displayTopic(topicIndex)">
         {{ topic.title }}
       </span>
-      <p *ngIf="topicIndex===topicOnDisplay">{{ topic.desc }}</p>
+      <p *ngIf="topicIndex===topicOnDisplay">
+        {{ topic.desc }} <br>
+        <button type="button"
+                class="general-button"
+                (click)="openTopic(topicIndex)">
+                Open
+        </button>
+        <button type="button"
+                class="general-button">
+                Modify
+        </button>
+        <button type="button"
+                class="general-button">
+                Delete
+        </button>
+      </p>
     </li>
   </ol>
 </div>
