--- a/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
+++ b/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
@@ -1,40 +1,56 @@
-<form [formGroup]="topicForm" (ngSubmit)="addNewTopic()">
+<form class="form-horizontal"
+      [formGroup]="topicForm"
+      (ngSubmit)="addNewTopic()">
 
-  <div class="form-elements">
-    <div class="form-row">
-      <label for="title">Title</label>
-      <input type="text" id="title" name="title" formControlName="title">
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2">
+        <label for="title" class="control-label">Title</label>
+      </div>
+      <div class="col-md-10">
+        <input type="text" id="title" name="title"
+                formControlName="title"
+                class="form-control">
+      </div>
     </div>
-    <p *ngIf="topicForm.get('title').touched&&topicForm.get('title').invalid">
-    Title is needed.</p>
-
-    <div class="form-row">
-      <label for="desc">Description</label>
-      <textarea id="desc" name="desc" formControlName="desc"></textarea>
-    </div>
-    <p *ngIf="topicForm.get('desc').touched&&topicForm.get('desc').invalid">
-    Title is needed.</p>
-
-    <button type="submit"
-            name="submit"
-            class="general-button"
-            [disabled]="topicForm.touched&&topicForm.invalid">
-            Submit
-    </button>
-    <button type="button"
-            name="clear"
-            class="general-button button-clear"
-            (click)="clearTopicForm()"
-            >
-            Clear
-    </button>
-    <button type="button"
-            name="cancel"
-            class="general-button button-cancel"
-            (click)="cancelAddTopic()"
-            >
-            Cancel
-    </button>
   </div>
+  <p *ngIf="topicForm.get('title').touched&&topicForm.get('title').invalid">
+  Title is needed.</p>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2">
+        <label for="desc" class="control-label">Description</label>
+      </div>
+      <div class="col-md-10">
+        <textarea id="desc" name="desc"
+                  formControlName="desc"
+                  class="form-control"></textarea>
+      </div>
+    </div>
+  </div>
+  <p *ngIf="topicForm.get('desc').touched&&topicForm.get('desc').invalid">
+  Title is needed.</p>
+
+  <button type="submit"
+          name="submit"
+          class="btn btn-primary"
+          [disabled]="topicForm.touched&&topicForm.invalid">
+          Submit
+  </button>
+  <button type="button"
+          name="clear"
+          class="btn btn-info"
+          (click)="clearTopicForm()"
+          >
+          Clear
+  </button>
+  <button type="button"
+          name="cancel"
+          class="btn btn-danger"
+          (click)="cancelAddTopic()"
+          >
+          Cancel
+  </button>
 
 </form>
