--- a/blog-frontend/src/app/topic-page/topic-page.component.css
+++ b/blog-frontend/src/app/topic-page/topic-page.component.css
@@ -1,9 +1,4 @@
-.topic-block {
-  display: inline-block;
-}
-
 .topic-title {
-  margin-left: 20px;
   cursor: pointer;
   border-radius: 5px;
   padding: 5px;
@@ -22,7 +17,14 @@
 }
 
 .topic-listing {
-  width: 40%;
+  margin: 0;
+  font-size: 125%;
+  line-height: 175%;
+}
+
+.topic-message {
+  font-size: 125%;
+  margin-left: 20px;
 }
 
 li {
@@ -30,7 +32,5 @@ li {
 }
 
 li p {
-  margin-left: 20px;
-  font-size: 80%;
   padding-left: 5px;
 }
