--- a/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
@@ -1,19 +1,43 @@
-<form [formGroup]="subTopicForm" (ngSubmit)="addSubTopic()">
+<form class="form-horizontal"
+      [formGroup]="subTopicForm"
+      (ngSubmit)="addSubTopic()">
 
-  <div class="form-elements">
-    <div class="form-row">
-      <label for="title">Title:</label>
-      <input type="text" name="title" id="title" formControlName="title"> <br>
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2 label-align">
+        <label for="title" class="control-label">Title:</label>
+      </div>
+      <div class="col-md-10">
+        <input type="text" name="title" id="title"
+                formControlName="title"
+                class="form-control">
+      </div>
     </div>
   </div>
 
-  <div class="form-elements">
-    <div class="form-row">
-      <label for="desc">Description</label>
-      <textarea name="desc" id="desc" rows="8" cols="80" formControlName="desc"></textarea>
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2 label-align">
+        <label for="desc" class="control-label">Description:</label>
+      </div>
+      <div class="col-md-10">
+        <textarea name="desc" id="desc" rows="8" cols="80"
+            formControlName="desc"
+            class="form-control"></textarea>
+      </div>
     </div>
   </div>
 
-  <button type="submit" class="general-button">Submit</button>
+  <div class="row">
+    <div class="col-md-2">
+
+    </div>
+    <div class="col-md-10">
+      <button type="submit"
+              class="btn btn-primary">
+              Submit
+      </button>
+    </div>
+  </div>
 
 </form>
