A few more styles with forms.

--- a/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic-form/sub-topic-form.component.html
@@ -37,6 +37,19 @@
               class="btn btn-primary">
               Submit
       </button>
+
+      <button type="button"
+              class="btn btn-info"
+              (click)="resetForm()">
+              Clear
+      </button>
+
+      <button type="button"
+              class="btn btn-danger"
+              (click)="cancelForm()">
+              Cancel
+      </button>
+
     </div>
   </div>
 
