--- a/blog-frontend/src/app/sub-topic/sub-topic.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic.component.html
@@ -8,8 +8,9 @@
   <div class="col-md-8">
     <h3>Contents of Topic {{ topic.title }} </h3>
     <br>
-    <div class="topic-list">
-      <ol *ngIf="formSubmitted" class="topic-listing">
+    <div class="topic-list"
+          *ngIf="subTopicsList.length>0">
+      <ol class="topic-listing">
         <li *ngFor="let subTItem of subTopicsList; let subTIndex=index">
           <span class="topic-title"
                 (click)=displaySubTopic(subTIndex)>
@@ -20,15 +21,47 @@
             {{ subTItem.desc }}
           </p>
 
+          <div class="space-above"
+                *ngIf="subTIndex===subTopicOnDisplay">
+
+            <button type="button"
+                    class="btn btn-primary">
+                    Open
+            </button>
+
+            <button type="button"
+                    class="btn btn-info">
+                    Modify
+            </button>
+
+            <button type="button"
+                    class="btn btn-danger">
+                    Delete
+            </button>
+          </div>
+
         </li>
       </ol>
     </div>
-  </div>
-  <div class="col-md-8">
+
+    <h5 *ngIf="subTopicsList.length===0">
+      No subtopics to display.
+    </h5>
+    <br>
+
+    <button type="button"
+            class="btn btn-primary"
+            (click)="addNewSubTopic()"
+            *ngIf="!addNewForm">
+            Add new
+    </button>
+    <br>
+
     <app-sub-topic-form [topic]="topic"
-                (formSubmitted)="formSubmitted=true"
-                *ngIf="!formSubmitted">
+                (formSubmitted)="addNewForm=false"
+                *ngIf="addNewForm">
     </app-sub-topic-form>
+
   </div>
 
   <div class="col-md-2">
