Created form for notes and added notes to DB.
The form for notes is reactive and programmatic, the input fields can be added and removed and arranged in any sequence. Most importantly, code appeas excatly the way it was written with spaces, tabs and new line characters. The submission of the form writes the note successfully to the MongoDB database.

--- a/blog-frontend/src/app/sub-topic/sub-topic.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic.component.html
@@ -13,7 +13,7 @@
       <ol class="topic-listing">
         <li *ngFor="let subTItem of subTopicsList; let subTIndex=index">
           <span class="topic-title"
-                (click)=displaySubTopic(subTIndex)>
+                (click)="displaySubTopic(subTIndex)">
                 {{ subTItem.title }}
           </span>
 
@@ -25,7 +25,8 @@
                 *ngIf="subTIndex===subTopicOnDisplay">
 
             <button type="button"
-                    class="btn btn-primary">
+                    class="btn btn-primary"
+                    (click)="openSubTopic(subTIndex)">
                     Open
             </button>
 
