--- a/blog-frontend/src/app/sub-topic/sub-topic.component.html
+++ b/blog-frontend/src/app/sub-topic/sub-topic.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-md-8">
-    <h3>Contents of Topic {{ topic.title }} </h3>
+    <h3>Contents of Topic {{ topic }} </h3>
     <br>
     <div class="topic-list"
           *ngIf="subTopicsList.length>0">
