--- a/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
+++ b/blog-frontend/src/app/topic-page/topic-form/topic-form.component.html
@@ -5,12 +5,16 @@
   <div class="form-group">
     <div class="row">
       <div class="col-md-2">
-        <label for="title" class="control-label">Title</label>
+        <label for="title"
+                class="control-label">
+                Title
+        </label>
       </div>
       <div class="col-md-10">
         <input type="text" id="title" name="title"
                 formControlName="title"
-                class="form-control">
+                class="form-control"
+                placeholder="Title">
       </div>
     </div>
   </div>
@@ -25,7 +29,8 @@
       <div class="col-md-10">
         <textarea id="desc" name="desc"
                   formControlName="desc"
-                  class="form-control"></textarea>
+                  class="form-control"
+                  placeholder="Description"></textarea>
       </div>
     </div>
   </div>
@@ -34,20 +39,20 @@
 
   <button type="submit"
           name="submit"
-          class="btn btn-primary"
+          class="btn btn-primary general-button"
           [disabled]="topicForm.touched&&topicForm.invalid">
           Submit
   </button>
   <button type="button"
           name="clear"
-          class="btn btn-info"
+          class="btn btn-info general-button"
           (click)="clearTopicForm()"
           >
           Clear
   </button>
   <button type="button"
           name="cancel"
-          class="btn btn-danger"
+          class="btn btn-danger general-button"
           (click)="cancelAddTopic()"
           >
           Cancel
